--- a/src/content/blog/post-1.mdx
+++ b/src/content/blog/post-1.mdx
@@ -8,6 +8,10 @@ image:
   alt: "The Astro logo on a dark background with a pink glow."
 tags: ["astro", "blogging", "learning in public"]
 ---
+import Greeting from "../../components/Greeting";
+
+
+<Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
 
 # My First Blog Post
 
